--- a/index.html
+++ b/index.html
@@ -1,11 +1,56 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chaitanya Jadhav | Portfolio</title>
-    <link rel="stylesheet" href="assets/style.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            line-height: 1.6;
+            background: #f4f4f4;
+            color: #333;
+        }
+        header {
+            background: #007acc;
+            color: #fff;
+            padding: 2rem;
+            text-align: center;
+        }
+        .contact a {
+            color: #fff;
+            margin: 0 10px;
+            text-decoration: none;
+        }
+        section {
+            padding: 2rem;
+            background: #fff;
+            margin: 1rem auto;
+            max-width: 900px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        .skills {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+        }
+        .skills li {
+            background: #e3f2fd;
+            padding: 6px 12px;
+            border-radius: 5px;
+            list-style: none;
+        }
+        footer {
+            background: #007acc;
+            color: #fff;
+            text-align: center;
+            padding: 1rem;
+            margin-top: 2rem;
+        }
+    </style>
 </head>
 <body>
     <header>
